--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="video">
         <h2>Teaching Video</h2>
         <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
-        <iframe width="560" height="315" src="VIDEO_URL" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="/video1019717316.mp4"" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <section id="contact">
