--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Here you can write about your teaching philosophy, your background, and your approach to education.</p>
+        <p>Hi, I'm Ryan Rong</p>
     </section>
 
     <section id="experience">
         <h2>Teaching Experience</h2>
-        <p>Detail your teaching experience, subjects taught, and any special projects or achievements.</p>
+        <p>N/A</p>
     </section>
 
     <section id="video">
-        <h2>Teaching Video</h2>
+        <h2>Explanation Video</h2>
         <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
         <iframe width="560" height="315" src="/video1019717316.mp4"" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <section id="contact">
         <h2>Contact Information</h2>
-        <p>Add your professional contact information here.</p>
+        <p>yarong@ucsd.edu</p>
     </section>
 
 </body>
