--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
     <header>
-        <h1>Your Name - Teaching Portfolio</h1>
+        <h1>Ryan Rong - Teaching Portfolio</h1>
     </header>
 
     <section id="about">
