--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <iframe width="560" height="315" src="/video1019717316.mp4"" frameborder="0" allowfullscreen></iframe>
     </section>
 
+    <section id="video2">
+        <h2>Dancer program with repeat</h2>
+        <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
+        <iframe width="560" height="315" src="/daner.mp4"" frameborder="0" allowfullscreen></iframe>
+    </section>
+
     <section id="contact">
         <h2>Contact Information</h2>
         <p>yarong@ucsd.edu</p>
