--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="video2">
         <h2>Dancer program with repeat</h2>
         <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
-        <iframe width="560" height="315" src="/daner.mp4"" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="/dancer.mp4"" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <section id="contact">
