--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         <iframe width="560" height="315" src="/dancer.mp4"" frameborder="0" allowfullscreen></iframe>
     </section>
 
+    <section id="video3">
+        <h2>Animal Parade Programs </h2>
+        <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
+        <iframe width="560" height="315" src="/bee.mp4"" frameborder="0" allowfullscreen></iframe>
+    </section>
+
     <section id="contact">
         <h2>Contact Information</h2>
         <p>yarong@ucsd.edu</p>
