--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <section id="video4">
-        <h2>Animal Parade Programs </h2>
+        <h2>Octagon Drawing </h2>
         <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
         <iframe width="560" height="315" src="/nestedloop.mp4"" frameborder="0" allowfullscreen></iframe>
     </section>
