--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section id="video6">
         <h2>Variables</h2>
         <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
-        <iframe width="560" height="315" src="/w4vid.pm4" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="/w4vid.mp4" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <section id="contact">
