--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
         <iframe width="560" height="315" src="/w4vid.mp4" frameborder="0" allowfullscreen></iframe>
     </section>
 
+    <section id="video7">
+        <h2>Variables</h2>
+        <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
+        <iframe width="560" height="315" src="/football.mp4" frameborder="0" allowfullscreen></iframe>
+    </section>
+
     <section id="contact">
         <h2>Contact Information</h2>
         <p>yarong@ucsd.edu</p>
