--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
 
     <section id="video7">
-        <h2>Variables</h2>
+        <h2>Football games</h2>
         <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
         <iframe width="560" height="315" src="/football.mp4" frameborder="0" allowfullscreen></iframe>
     </section>
