--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         <iframe width="560" height="315" src="/ball.mp4" frameborder="0" allowfullscreen></iframe>
     </section>
 
+     <section id="video9">
+        <h2>Penguin Video/h2>
+        <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
+        <iframe width="560" height="315" src="/penguin.mp4" frameborder="0" allowfullscreen></iframe>
+    </section>    
 
     
     <section id="contact">
