--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
         <iframe width="560" height="315" src="/penguin.mp4" frameborder="0" allowfullscreen></iframe>
     </section>    
 
-    
+        <section id="video10">
+        <h2>Treasure hunt</h2>
+        <!-- Replace 'VIDEO_URL' with the actual URL of the video -->
+        <iframe width="560" height="315" src="/treasure.mp4" frameborder="0" allowfullscreen></iframe>
+    </section>    
     <section id="contact">
         <h2>Contact Information</h2>
         <p>yarong@ucsd.edu</p>
